--- a/src/Components/HomePage/FAQSection/FAQSection.scss
+++ b/src/Components/HomePage/FAQSection/FAQSection.scss
@@ -2,7 +2,7 @@
   background: transparent;
 
   .faq-wrapper {
-    max-width: 100%;
+    max-width: 1000px;
     margin: 0 auto;
     text-align: center;
     // padding: 0 100px;
