--- a/src/Components/HomePage/HomeHero/HomeHero.scss
+++ b/src/Components/HomePage/HomeHero/HomeHero.scss
@@ -405,18 +405,25 @@
   }
 
   .hero-features-section {
+    margin-top: 30px;
     padding: 0px 20px;
     gap: 10px;
 
     .feature-bar {
+      .feature-icon-div {
+        width: 35px;
+        height: 30px;
 
-      .feature-icon {
-        width: 25px;
-        height: 25px;
+        .feature-icon {
+          width: 15px;
+          height: 15px;
+        }
       }
 
       .feature-text {
+        height: 30px;
         font-size: 14px;
+        padding-left: 15px;
       }
     }
   }
