--- a/src/Components/HomePage/FAQSection/FAQSection.scss
+++ b/src/Components/HomePage/FAQSection/FAQSection.scss
@@ -299,7 +299,8 @@
 
       .section-title {
         font-size: 32px;
-        margin-bottom: 12px;
+        margin-bottom: 20px;
+        font-weight: 600;
       }
 
       .faq-description {
@@ -319,7 +320,7 @@
         padding: 20px 25px;
 
         .question-text {
-          font-size: 16px;
+          font-size: 20px;
         }
 
         .faq-icon {
