--- a/src/Components/HomePage/HomeHero/HomeHero.scss
+++ b/src/Components/HomePage/HomeHero/HomeHero.scss
@@ -133,6 +133,28 @@
       flex-direction: row;
       gap: 15px;
       margin-top: 10px;
+
+      .btn.whatsapp-btn {
+        font-size: 20px;
+        font-weight: 500;
+
+        .btn-icon {
+          font-size: 28px;
+        }
+      }
+
+      .btn.tertiary-btn {
+        font-size: 20px;
+        font-weight: 500;
+
+        .btn-icon {
+          font-size: 20px;
+          width: 22px;
+          height: 22px;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
     }
   }
 }
