--- a/src/Components/HomePage/ProcessSection/ProcessSection.scss
+++ b/src/Components/HomePage/ProcessSection/ProcessSection.scss
@@ -15,15 +15,16 @@
       font-weight: 700;
       line-height: 1.3;
       color: white;
-      margin: 0 0 20px 0;
+      margin: 0 0 10px 0;
     }
 
     .section-description {
-      font-size: 18px;
+      font-size: 14px;
+      font-weight: 500;
       line-height: 1.6;
       color: white;
       margin: 0 auto 50px auto;
-      max-width: 900px;
+      max-width: 600px;
     }
   }
 
@@ -124,6 +125,11 @@
       min-width: 300px;
       padding: 14px 28px;
       font-size: 16px;
+      font-weight: 500;
+
+      .btn-icon {
+        font-size: 25px;
+      }
     }
   }
 }
@@ -337,13 +343,16 @@
 
     .process-wrapper {
       .process-title {
-        font-size: 26px;
+        font-size: 30px;
+        font-weight: 600;
         margin-bottom: 10px;
+        text-align: left;
       }
 
       .section-description {
         font-size: 16px;
         margin-bottom: 25px;
+        text-align: left;
       }
     }
 
@@ -389,11 +398,15 @@
     }
 
     .whatsapp-booking-wrapper {
-      margin-top: 25px;
+      margin-top: 30px;
 
       .btn {
         padding: 10px 18px;
-        font-size: 14px;
+        font-size: 20px;
+
+        .btn-icon {
+          font-size: 30px;
+        }
       }
     }
   }
