--- a/src/Components/HomePage/ServicesSection/ServicesSection.scss
+++ b/src/Components/HomePage/ServicesSection/ServicesSection.scss
@@ -252,6 +252,15 @@
       padding: 0;
       gap: 15px;
 
+      // Reorder items on mobile: left side (odd) first, right side (even) after
+      &:nth-child(odd) {
+        order: 1;
+      }
+
+      &:nth-child(even) {
+        order: 2;
+      }
+
       .service-image-wrapper {
         width: 80px;
         height: 80px;
@@ -288,11 +297,15 @@
     .services-wrapper {
       .section-title {
         font-size: 30px;
+        text-align: left;
+        font-weight: 600;
       }
 
       .section-description {
-        font-size: 17px;
+        font-size: 16px;
+        font-weight: 500;
         margin-bottom: 25px;
+        text-align: left;
       }
     }
 
@@ -305,6 +318,15 @@
       padding: 0;
       gap: 12px;
 
+      // Reorder items on mobile: left side (odd) first, right side (even) after
+      &:nth-child(odd) {
+        order: 1;
+      }
+
+      &:nth-child(even) {
+        order: 2;
+      }
+
       .service-image-wrapper {
         width: 70px;
         height: 70px;
@@ -316,11 +338,12 @@
         gap: 3px;
 
         .service-title {
-          font-size: 16px;
+          font-size: 18px;
         }
 
         .service-description {
-          font-size: 14px;
+          font-size: 16px;
+          color: black;
         }
       }
     }
@@ -332,7 +355,12 @@
         min-width: 100%;
         width: 100%;
         padding: 12px 20px;
-        font-size: 15px;
+        font-size: 22px;
+        font-weight: 500;
+
+        .btn-icon {
+          font-size: 30px;
+        }
       }
     }
   }
