--- a/src/Components/HomePage/WhyChooseUsSection/WhyChooseUsSection.scss
+++ b/src/Components/HomePage/WhyChooseUsSection/WhyChooseUsSection.scss
@@ -53,12 +53,12 @@
       .feature-item {
         display: flex;
         align-items: center;
-        gap: 10px;
+        gap: 20px;
         text-align: left;
 
         .feature-icon-wrapper {
-          width: 50px;
-          height: 50px;
+          width: 45px;
+          height: 45px;
           background: #BA00FF;
           border-radius: 50%;
           display: flex;
@@ -67,8 +67,8 @@
           flex-shrink: 0;
 
           .feature-icon {
-            width: 28px;
-            height: 28px;
+            width: 25px;
+            height: 25px;
             object-fit: contain;
             margin-top: 2px;
           }
@@ -81,14 +81,14 @@
             font-size: 18px;
             font-weight: 600;
             color: #333;
-            margin-top: 5px;
+            margin-bottom: 5px;
             // line-height: 1.3;
           }
 
           .feature-description {
-            font-size: 16px;
-            // line-height: 1.6;
-            color: #666;
+            font-size: 14px;
+            line-height: 1.1;
+            color: black;
             margin: 0;
           }
         }
@@ -101,8 +101,13 @@
 
         .btn {
           min-width: 280px;
+          font-weight: 500;
           padding: 14px 28px;
           font-size: 16px;
+
+          .btn-icon {
+            font-size: 25px;
+          }
         }
       }
     }
@@ -257,7 +262,14 @@
     .why-choose-us-wrapper {
       .features-container {
         .section-title {
-          font-size: 26px;
+          font-size: 28px;
+          font-weight: 600;
+          text-align: left;
+        }
+
+        .feature-description {
+          font-size: 14px;
+          text-align: left;
         }
 
         .features-list {
@@ -278,8 +290,10 @@
           // }
 
           .feature-content {
+            gap: 0px;
+
             .feature-title {
-              font-size: 20px;
+              font-size: 22px;
             }
 
             .feature-description {
@@ -296,7 +310,11 @@
             min-width: 100%;
             width: 100%;
             padding: 12px 20px;
-            font-size: 14px;
+            font-size: 22px;
+
+            .btn-icon {
+              font-size: 30px;
+            }
           }
         }
       }
