--- a/src/index.scss
+++ b/src/index.scss
@@ -137,6 +137,7 @@ $bg-dark: #036DAB;
   border: none;
   cursor: pointer;
   justify-content: center;
+  text-align: center;
 
   .btn-icon {
     font-size: 20px;
