--- a/src/Components/HomePage/ProcessSection/ProcessSection.scss
+++ b/src/Components/HomePage/ProcessSection/ProcessSection.scss
@@ -411,3 +411,18 @@
     }
   }
 }
+
+@media (max-width: 400px) {
+  .process-section {
+    .whatsapp-booking-wrapper {
+      .btn {
+        padding: 10px 18px;
+        font-size: 18px;
+
+        .btn-icon {
+          font-size: 25px;
+        }
+      }
+    }
+  }
+}
